--- a/src/App.css
+++ b/src/App.css
@@ -35,17 +35,20 @@
 
 body {
   margin: 0;
-
   -webkit-font-smoothing: antialiased;
 }
 
 .App {
   background-color: var(--bg);
-  min-height: 100vh;
+  min-height: 100dvh;
+  padding-left: 10%;
+  padding-right: 10%;
+
+  /* flex-box */
   display: flex;
   flex-direction: column;
-  align-items: left;
   justify-content: center;
+  align-items: left;
 
   /* text */
   line-height: 1;
@@ -61,6 +64,7 @@ body {
   }
 
   #save-the-date {
+    margin-top: 0;
     font-size: 30px;
     margin-bottom: -20px;
   }
@@ -77,7 +81,7 @@ body {
 
   /* nick & zoe */
   h1 {
-   font-size: 60px;
+   font-size: 56px;
    font-weight: normal;
    margin-bottom: 0px;
    /* margin-top: 0px; */
@@ -89,13 +93,18 @@ body {
     margin-bottom: 0px;
   }
 
-  p#info {
-    margin-top: 24px;
-    font-size: 16px;
+  #location {
+    font-size: 22px;
+
+    a {
+      color: var(--text);
+      text-decoration: none;
+    }
   }
 
-  a {
-    color: var(--text);
-    text-decoration: none;
+
+  p#info {
+    margin-top: 24px;
+    font-size: 14px;
   }
 }
